TwoFactorAuthK8s/auth2fa-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth2fa-deployment
  labels:
    app: auth2fa
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth2fa
  template:
    metadata:
      labels:
        app: auth2fa
    spec:
      containers:
      - name: auth2fa
        image: joshuagoldman1994/auth2fa:2.0.0-t6
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth2fasvc
  namespace: dev
spec:
  selector:
    app: auth2fa
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
